--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -19,7 +19,7 @@
           }
           p{
                position: absolute;
-               left: 32.15%;
+               left: 30.15%;
                right: 32.22%;
                top: 64.11%;
                bottom: 13.88%;
@@ -37,7 +37,7 @@
     }
     
 }
-@media screen and (min-width: 2000px) and (max-width: 2561px) {
+@media screen and (min-width: 2561px) {
      .kasa-footer {
    
           width: 100%;
@@ -53,7 +53,43 @@
                }
                p{
                     position: absolute;
-                    left: 35.15%;
+                    left: 33.15%;
+                    right: 32.22%;
+                    top: 64.11%;
+                    bottom: 13.88%;
+     
+                    @include  policeStyle1();
+                    font-size: 24px;
+                    
+     
+                    display: flex;
+                    align-items:center;
+                    text-align: center;
+                    padding-left: 7%;
+                    color: #FFFFFF;
+               }
+         }
+          
+           }
+
+}     
+@media screen and (min-width: 2000px) and (max-width: 2560px) {
+     .kasa-footer {
+   
+          width: 100%;
+          .kasa-footer_elements{
+               
+               img{
+                    position: absolute;
+                    left: 45.76%;
+                    right: 45.76%;
+                    top: 31.58%;
+                    bottom: 49.55%;  
+                    //align-items: center;
+               }
+               p{
+                    position: absolute;
+                    left: 34.15%;
                     right: 32.22%;
                     top: 64.11%;
                     bottom: 13.88%;
@@ -79,10 +115,39 @@
           
            }
 }
-@media screen and  (min-width: 1600px) {
+@media screen and  (min-width: 1025px) and (max-width:1300px) {
      .kasa-footer {
    
     width: 100%;
+    .kasa-footer_elements{
+               
+     img{
+          position: absolute;
+          left: 44.76%;
+          right: 45.76%;
+          top: 31.58%;
+          bottom: 49.55%;  
+          //align-items: center;
+     }
+     p{
+          position: absolute;
+          left: 33.15%;
+          right: 28.22%;
+          top: 64.11%;
+          bottom: 13.88%;
+
+          @include  policeStyle1();
+          font-size: 24px;
+         
+
+          display: flex;
+          align-items:center;
+          text-align: center;
+          padding:unset;
+          color: #FFFFFF;
+     }
+}
+
     
      }
      
@@ -101,7 +166,7 @@
                
                img{
                     position: absolute;
-                    left: 45.76%;
+                    left: 44.76%;
                     right: 45.76%;
                     top: 31.58%;
                     bottom: 49.55%;  
@@ -109,7 +174,7 @@
                }
                p{
                     position: absolute;
-                    left: 36.15%;
+                    left: 31.15%;
                     right: 28.22%;
                     top: 64.11%;
                     bottom: 13.88%;
@@ -150,7 +215,7 @@
                }
                p{
                     position: absolute;
-                    left: 34.15%;
+                    left: 28.15%;
                     right: 22.22%;
                     top: 64.11%;
                     bottom: 13.88%;
@@ -189,7 +254,7 @@
                }
                p{
                     position: absolute;
-                    left:  28%;
+                    left:  25%;
                     right: -18.4%;
                     top: 48.33%;
                     bottom: 29.67%;
@@ -223,14 +288,14 @@
                
                img{
                     position: absolute;
-                    left: 33.87%;
+                    left: 34.87%;
                     right: 33.6%;
                     top: 29.67%;
                     bottom: 51.46%;
                }
                p{
                     position: absolute;
-                    left:  22%;
+                    left:  19%;
                     right: -18.4%;
                     top: 48.33%;
                     bottom: 29.67%;
@@ -272,7 +337,49 @@
                }
                p{
                     position: absolute;
-                    left:  22%;
+                    left:  17%;
+                    right: -18.4%;
+                    top: 48.33%;
+                    bottom: 29.67%;
+                    @include  policeStyle1();
+                    
+                    font-size: 12px;
+                   
+                    width: 75%;
+                    display: flex;
+                    align-items: flex-end;
+                    text-align: center;
+
+                    color: #FFFFFF;
+
+               }
+         }
+         
+     }     
+
+}
+@media screen and (max-width: 320px){
+     .kasa-footer{
+          position: relative;
+          height: 209px;
+          width: 375px;
+          width: 100%;
+          //top: 2800px;
+   
+          background: #000000;
+         
+         .kasa-footer_elements{
+               
+               img{
+                    position: absolute;
+                    left: 33.87%;
+                    right: 33.6%;
+                    top: 29.67%;
+                    bottom: 51.46%;
+               }
+               p{
+                    position: absolute;
+                    left:  15%;
                     right: -18.4%;
                     top: 48.33%;
                     bottom: 29.67%;
