--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -772,7 +772,7 @@
         
         .kasa-header-nav nav{          
             position: absolute;
-            left: 62%;
+            left: 54%;
             //left: 137.21%;
             right: 0%;
             //top: 38.3%;
